Service area and boatyard api optimization